--- a/index.html
+++ b/index.html
@@ -11,50 +11,57 @@
     />
   </head>
   <body>
-    <h1>Recipe Library</h1>
+    <header class="top-nav">
+      <h1>Recipe Library</h1>
+
+      <div>
+        <h2>Search recipes</h2>
+        <input type="text" id="search" placeholder="🔍...." class="search" />
+      </div>
+    </header>
+
     <section class="filters">
       <div>
         <h2>Filter on kitchen</h2>
-        <button id="btn-all" class="kitchen" data-cuisine="all">All</button>
-        <button id="btn-italy" class="kitchen" data-cuisine="italy">
-          Italy
-        </button>
-        <button id="btn-usa" class="kitchen" data-cuisine="usa">USA</button>
-        <button id="btn-china" class="kitchen" data-cuisine="china">
-          China
-        </button>
+        <select id="cuisine" class="kitchen">
+          <option value="all">All</option>
+          <option value="Italian">Italian</option>
+          <option value="american">American</option>
+          <option value="china">China</option>
+          <option value="korean">Korean</option>
+          <option value="southern">Southern</option>
+          <option value="asian">Asian</option>
+          <option value="south american">South american</option>
+          <option value="mexican">Mexican</option>
+          <option value="mediterranean">Mediterranean</option>
+        </select>
       </div>
 
       <div>
         <h2>Filter on Diets</h2>
-        <button id="btn-diet-all" class="diet" data-diet="diet-all">All</button>
-        <button id="btn-vegan" class="diet" data-diet="vegan">Vegan</button>
-        <button id="btn-vegetarian" class="diet" data-diet="vegetarian">
-          Vegetarian
-        </button>
-        <button id="btn-glutenfree" class="diet" data-diet="gluten-free">
-          Gluten-free
-        </button>
-        <button id="btn-dairyfree" class="diet" data-diet="dairy-free">
-          Dairy-free
-        </button>
+        <select id="diet" class="diet">
+          <option value="diet-all">All</option>
+          <option value="vegan">Vegan</option>
+          <option value="vegetarian">Vegetarian</option>
+          <option value="gluten free">Gluten-free</option>
+          <option value="dairy free">Dairy-free</option>
+        </select>
       </div>
-    </section>
 
-    <section class="filters">
       <div>
         <h2>Sort on time</h2>
-        <button id="btn-desc" class="time" data-sort="desc">Descending</button>
-        <button id="btn-asc" class="time" data-sort="asc">Ascending</button>
+        <select id="sortTime" class="time">
+          <option value="asc">Ascending (fastest first)</option>
+          <option value="desc">Descending (slowest first)</option>
+        </select>
       </div>
+
       <div>
         <h2>Sort by popularity</h2>
-        <button id="btn-mostPopular" class="popular" data-popular="most">
-          Most Popular
-        </button>
-        <button id="btn-leastPopular" class="popular" data-popular="least">
-          Least Popular
-        </button>
+        <select id="sortPop" class="popular">
+          <option value="most">Most popular</option>
+          <option value="least">Least popular</option>
+        </select>
       </div>
       <div>
         <h2>Random</h2>
@@ -62,6 +69,9 @@
           Random Recipes
         </button>
       </div>
+      <button id="btn-show-all" class="show-all" style="display: none">
+        Show all Recipe again
+      </button>
     </section>
 
     <section>
