fixed headern, fixed comments

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   </head>
   <body>
     <header class="top-nav">
+      <img src="images/aprikos.jpg" alt="aprikos" class="food" />
       <h1>Recipe Library</h1>
 
-      <div>
+      <div class="search-area">
         <h2>Search recipes</h2>
         <input type="text" id="search" placeholder="🔍...." class="search" />
       </div>
